conf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __app-name__
spec:
  selector:
    matchLabels:
      app: __app-name__
  replicas: __replicas__
  template:
    metadata:
      labels:
        app: __app-name__
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: demo-app
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 20
            preference:
              matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: In
                values:
                - wjv
          - weight: 10
            preference:
              matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: In
                values:
                - jkt
      imagePullSecrets:
      - name: __image-secret__
      containers:
      - name: __app-name__
        image: harbor-wjv.trial-kl.ms-biznetgio.net:8443/__image-name__:__image-tag__
        ports:
        - containerPort: 80
        resources:
         requests:
          memory: 10M
          cpu: 10m
         limits:
          memory: __memory__M
          cpu: __cpu__m
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
