conf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __app-name__
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - __domain-name__
    secretName: __app-name__-tls
  rules:
  - host: __domain-name__
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: __app-name__
            port:
              number: 80
